# d-phacktorator

./: .gitignore  README.md  analysis_tasks.py  dataset_manager.py  dphack.py  phack.py  phackt.py  pyproject.toml
d-phacktorator/: README.md  columns.json  phackt.py
dphackt/: README.md  analysis_tasks.py  data_loaders.py  phackt.py  pyproject.toml  setup.py
dphackt/examples/: README.md
dphackt/src/dphackt/: __init__.py
