[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dphackt"
version = "0.1.1"
description = "A flexible data analysis library for handling various datasets and performing analyses. Developed in support of the D-phacktorator."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
authors = [
    { name = "Scott VanRavenswaay", email = "scottvr@gmail.com" }
]
urls = { "Homepage" = "https://github.com/scottvr/d-phacktorator" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'pandas>=1.0.0',
    'numpy>=1.18.0',
    'matplotlib>=3.0.0'
]

[project.scripts]
dphackt-cli = "dphackt.phackt:cli"

[tool.setuptools.packages.find]
exclude = ["tests", "examples"]
