[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dphackt"
version = "0.1.0"
description = "A flexible data analysis library for handling various datasets and performing analyses. Developed in support of the D-phacktorator."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
authors = [
    { name = "Scott VanRavenswaay", email = "scottvr@gmail.com" }
]
urls = { "Homepage" = "https://github.com/scottvr/d-phacktorator" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers, Data Scientists, Digital Humorists",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    'pandas>=1.0.0',
    'numpy>=1.18.0',
    'matplotlib>=3.0.0'
]

[tool.setuptools.packages.find]
exclude = ["tests", "examples"]
